@@ -8,6 +8,8 @@
     given selector.
   * Nokogiri::XML::Node#ancestors now returns an Nokogiri::XML::NodeSet
   * Nokogiri::XML::Node#ancestors will match parents against optional selector
+  * Nokogiri::HTML::Document#meta_encoding for getting the meta encoding
+  * Nokogiri::HTML::Document#meta_encoding= for setting the meta encoding
 
 === 1.2.3 / 2009-03-22
 
